# brids-rs

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.markdown  README.md
examples/: parse.rs  random.rs  seed.rs  serde.rs
src/: cnpj.rs  cpf.rs  lib.rs
