[package]
name = "brids"
version = "0.2.0"
authors = ["Ricardo Silva Veloso <ricvelozo@gmail.com>"]
license = "MIT/Apache-2.0"
description = """
Parse and generate random CPF/ICN and CNPJ, Brazil's ID numbers.
"""
repository = "https://github.com/ricvelozo/brids-rs"
documentation = "https://docs.rs/brids"
keywords = ["parser", "format", "validation", "cpf", "cnpj"]
categories = ["parser-implementations", "value-formatting"]
readme = "README.markdown"

[badges]
travis-ci = { repository = "ricvelozo/brids-rs" }

[features]
default = ["random"]
random = ["rand"]

[dependencies]
rand = { version = "0.4", optional = true }
